<resources>
    <string name="ticket_string">
    <![CDATA[
    Instead of printing off thousands of multi-page Convention programs and ordering the same number
    of paper tickets, we developed this app to conserve paper and allow you to have everything you
    need to know about Convention Weekend 2020 at your fingertips.
    <p>
    All Convention ticket holders received an email from our team with their digital ticket
    information. Android users can will use that email as their ticket into Convention. Please have
    the email up and ready for scanning at the door. Our team will be checking IDs at the door,
    those without IDs will be turned away. Purchased a ticket but didn\’t get an email? Contact us.
    <p>
    Ticket holders are encouraged to use the app as their event program for the weekend. A limited
    number of printed versions of the weekend program will be available upon request.
    ]]>

    </string>
    <string name="general_info_events_link"><a href="https://mockcon.com/documents/information.html">General Information</a></string>
    <string name="platform_rules_events_link"><a href="https://mockcon.com/documents/platformandrules.html">Platform and Rules</a></string>
    <string name="app_name">MockCon</string>
    <string name="action_settings">Settings</string>
    <string name="about_string">
    <![CDATA[
    The Washington and Lee University Mock Convention is a simulated presidential nominating convention held every four years by the students of W&L.
    Its goal is to predict who the party out of power in the White House will nominate to run for President of the United States.
    <p>
    We got our start in 1908 when presidential candidate Williams Jennings Bryan announced a visit to Lexington, VA, sparking interest on W&L’s campus.
    The Forum, the campus’ largest political club at the time, hosted a replica of the upcoming Democratic Convention to honor the visit of Bryan and to
    heighten the excitement of the student body. The accurate prediction of Bryan as the nominee cemented Mock Convention as one of the core features of
    the Washington and Lee experience.
    <p>
    Over 100 years later, the students of Washington and Lee University have gathered to create one of the most ambitious, non-partisan student political
    research projects in the country. With the stage set for an intense contest for the 2020 Democratic nomination, we invite you to join us as, for the
    27th time, we celebrate the complexity and importance of the electoral process.
    ]]>

    </string>
    <string name="convention_chronicles_link"><a href="https://www.mockconvention.com/convention-chronicles">Convention Chronicles</a></string>
    <string name="newsroom_link"><a href="https://www.mockconvention.com/newsroom">Newsroom</a></string>
    <string name="team_name">MockCon</string>
    <string name="team_action_settings">Settings</string>
    <string name="team_string">
    <![CDATA[
    Washington and Lee Mock Convention is a nationally recognized and respected organization. Meet the students who are working hard to keep it that way.
    ]]>
    </string>
    <string name="mock_con_departments"><a href="https://www.mockconvention.com/our-team">Meet the MockCon Departments</a></string>
    <string name="memorabilia_name">MockCon</string>
    <string name="memorabilia_action_settings">Settings</string>
    <string name="memorabilia_string">
    <![CDATA[
    Our Memorabilia & Sales Team works hard to further the Mock Convention image beyond just politics. The team joins business and art to create and design exciting memorabilia to help
    the convention live beyond 2020. Explore our catalog below and take home a piece of Mock Con.
    ]]>
    </string>
    <string name="memorabilia_link"><a href="https://www.mockconvention.com/store">Visit the MockCon Store</a></string>
    <string name="convention_layout">For information regarding parking, the convention layout and seating, shuttles, safety and security, and more, please visit the following link: <a href="https://mockcon.com/documents/information.html">General Information</a></string>
    <string name="platform_rules_link">For information about the Mock Convention platform and rules, please visit the following link: <a href="https://mockcon.com/documents/platformandrules.html">Platform and Rules</a></string>
    <string name="contact_name">MockCon</string>
    <string name="contact_action_settings">Settings</string>
    <string name="contact_string">
    <![CDATA[
    Please contact Mock Convention below or via mockcon@mail.wlu.edu concerning any inquiries, comments, or suggestions - whether
    general or specific. We\'re excited to get in touch.
    ]]>
    </string>
    <string name="contact_link"><a href="https://www.mockconvention.com/contact">Contact the Convention Team</a></string>
    <string name="developer_contact_name">MockCon</string>
    <string name="developer_contact_action_settings">Settings</string>
    <string name="developer_contact_string">
    <![CDATA[
    Have a question about the app or want to give feedback on your experience? Contact our App Developer team via
    mockconappdevelopers@mail.wlu.edu.
    ]]>
    </string>
    <string name="developer_contact_link"><a href="https://mockcon.com/">Contact the App Developer Team</a></string>
    <string name="trevor_noah_blurb">
        <![CDATA[
        <b>Date: Session Three</b>
        <p>
        <b>Location: Duchossois Tennis Center</b>
        <p>
        Trevor Noah is the host of the Emmy® and Peabody® Award-winning "The Daily Show" on Comedy
        Central.  The "Daily Show with Trevor Noah" recently received two 2019 Primetime Emmy
        nominations, including Outstanding Variety Talk Series and Outstanding Interactive Program.
        <p>
        Trevor has written, produced, and starred in 8 comedy specials, most recently including
        "Son of Patricia" on Netflix.  Trevor\'s success has also spanned to sold out shows over 5
        continents.  Trevor is currently crossing North America on his first ever arena outing with
        the "Loud & Clear Tour 2019."  In April 2019, Trevor launched his new podcast series "On
        Second Thought: The Trevor Noah Podcast" exclusively on Luminary.
        <p>
        Trevor Noah is the author of the #1 New York Times bestseller "Born a Crime: Stories from a
        South African Childhood" and its young readers adaptation "It\'s Trevor Noah: Born a Crime:
        Stories from a South African Childhood," which also debuted as a New York Times bestseller.
        The book received the Thurber Prize for American Humor and two NAACP Image Awards, one for
        Outstanding Literary Work by a Debut Author and another for Outstanding Literary Work in the
        Biography/Auto-Biography category.  The Audible edition of "Born a Crime," performed by Trevor,
        remains one of the top-selling, highest-rated, and most-commented-on Audible performances
        of all time.  To date, "Born a Crime" has sold over 1 million copies across all formats.
        <p>
        Trevor\'s production company, Day Zero Productions, recently partnered with Viacom and has
        several projects in development, including the feature film adaptation of Born a Crime
        starring Academy Award winner Lupita Nyong\'o, and a half-hour comedy with Roy Wood Jr. and
        Aaron McGruder at Comedy Central.
        <p>
        In April 2018, Noah launched the Trevor Noah Foundation, a youth development initiative that
        enhances youth preparedness for higher education or entry into the workforce.
        ]]>
    </string>
    <string name="tara_mcgowan_blurb">
        <![CDATA[
        <b>Date: Politics & Media Panel</b>
        <p>
        <b>Location: Keller Theater - Lenfest</b>
        <p>
        Tara McGowan is the Founder and CEO of progressive group ACRONYM, which recently launched a
        $75 million digital effort to counter Trump online. A longtime Democratic strategist for
        groups like Priorities USA, NextGen, and the 2012 Obama campaign, Tara McGowan has quickly
        become the leading voice on digital politics on the Left. She\’s regularly featured in the
        New York Times, and other major print outlets, and she has spoken about the 2020 digital
        race for the White House with on NPR and CNN.
        ]]>
    </string>
    <string name="symone_sanders_blurb">
        <![CDATA[
        <b>Date: Session One</b>
        <p>
            <b>Location: Duchossois Tennis Center</b>
        <p>
        A champion for women, Symone D. Sanders is a strategist, communications consultant,
        CNN Political Commentator and served as a Spring 2018 Resident Fellow at Harvard’s Institute
        of Politics at the Kennedy School. Symone rose to prominence during her tenure as the
        National Press Secretary for U.S. Sen. Bernie Sanders 2016 presidential campaign. At 25,
        Symone demonstrated an uncanny command of the issues earning her a place in history as the
        youngest presidential press secretary on record and a spot on Rolling Stone Magazine\’s
        list of 16 young Americans shaping the 2016 election.
        <p>
        However, Symone was not new to presidential politics. When she was 16, she introduced former
        President Bill Clinton at a luncheon in Omaha, Nebraska. Following her remarks, President
        Clinton said, “Symone spoke so well I really hate to follow her.” President Clinton went on
        to write about Symone in his book, Giving: How Each of Us Can Change the World.
        <p>
        Now, Symone draws from her experience on the national stage to provide perceptive analysis
        on political and social issues. Her lively presentations challenge the conventional wisdom
        that strong communities are only defined by what we have in common. Instead, she outlines
        the way our differences contribute to effective social movements.
        <p>
        Symone has been featured on NPR, Fox News, MSNBC, NBC, BET, TV One and CNN. She has been
        profiled in the Washington Post, the New Yorker, ESSENCE Magazine and ELLE.  Symone now is
        Senior Advisor for Joe Biden\'s 2020 presidential campaign and currently Principal of the 360
        Group, LLC. where she provides strategic communications guidance to organizations, businesses,
        individuals, campaigns and candidates and helps clients find sound solutions to tough
        political and social problems. Symone has also been selected to serve as one of USC
        Dornsife\'s 2019 Fellows.

        ]]>
    </string>
</resources>