<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <!-- Events  =================================================================== -->

    <LinearLayout
        android:id="@+id/event_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="14dp"
            android:textStyle="bold"/>

        <!--- put in the two links for general information and platform and rules -->

        <TextView
            android:id="@+id/general_info_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/general_info_events_link"
            android:textColor="#000000"
            android:textColorLink="#003087"
            android:textSize="14dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/platform_rules_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/platform_rules_events_link"
            android:textColor="#000000"
            android:textColorLink="#003087"
            android:textSize="14dp"
            android:textStyle="bold"/>


        <ImageButton
            android:id="@+id/event_main_image_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/politics_in_media"
            app:srcCompat="@drawable/politics_in_media"/>

        <TextView
            android:id="@+id/event_subsidary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <GridView
            android:id="@+id/event_grid_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:horizontalSpacing="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:numColumns="2"
            android:verticalSpacing="10dp" />

    </LinearLayout>

    <!-- Press  =================================================================== -->

    <LinearLayout
        android:id="@+id/press_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/press_subsidary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/press_release_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="14dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/convention_chronicles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/convention_chronicles_link"
            android:textColor="#000000"
            android:textColorLink="#003087"
            android:textSize="14dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/press_release_articles_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:textSize="14dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/newsroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/newsroom_link"
            android:textColor="#000000"
            android:textColorLink="#003087"
            android:textSize="14dp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/press_speakers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <GridView
            android:id="@+id/speakers_grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:horizontalSpacing="0dp"
            android:numColumns="2"
            android:verticalSpacing="10dp" />

    </LinearLayout>

    <!-- Tickets =================================================================== -->

    <LinearLayout
        android:id="@+id/ticket_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ticket_image"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ticket_image"
            app:srcCompat="@drawable/ticket_image" />

        <TextView
            android:id="@+id/ticket_blurb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:textSize="12dp" />

    </LinearLayout>

    <!-- About  =================================================================== -->

    <ScrollView
        android:id="@+id/about_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/about_scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:textColor="#000000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/team_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/team_image"
                android:layout_width="271dp"
                android:layout_height="207dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/teampicture"
                app:srcCompat="@drawable/teampicture" />

            <TextView
                android:id="@+id/team_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/meet_the_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/mock_con_departments"
                android:textColor="#000000"
                android:textColorLink="#003087"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/memorabilia_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/memorabilia_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/see_memorabilia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/memorabilia_link"
                android:textColor="#000000"
                android:textColorLink="#003087"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/general_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/see_convention_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/convention_layout"
                android:textColor="#000000"
                android:textColorLink="#003087"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/see_platform_rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/platform_rules_link"
                android:textColor="#000000"
                android:textColorLink="#003087"
                android:textSize="12dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/contact_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/convention_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/contact_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/see_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/contact_link"
                android:textColor="#000000"
                android:textColorLink="#003087"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/developer_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/developer_contact_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/see_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/developer_contact_link"
                android:textColor="#000000"
                android:textColorLink="#003087"
                android:textSize="12dp" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>